add compiling route

--- a/miniapp/project.private.config.json
+++ b/miniapp/project.private.config.json
@@ -8,6 +8,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "pages/home/home",
+          "pathName": "pages/home/home",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "pages/menu/product/product",
           "pathName": "pages/menu/product/product",
           "query": "",
