--- a/backEnd/ruoyi-admin/src/main/resources/application.yml
+++ b/backEnd/ruoyi-admin/src/main/resources/application.yml
@@ -87,6 +87,14 @@ spring:
         max-active: 8
         # #连接池最大阻塞等待时间（使用负值表示没有限制）
         max-wait: -1ms
+wx:
+  miniapp:
+    configs:
+        appid: wx5ba10ba7f83bbb15
+        secret: 94e9e9d537374768e14325d8c3242fb2
+        token: #微信小程序消息服务器配置的token
+        aesKey: #微信小程序消息服务器配置的EncodingAESKey
+        msgDataFormat: JSON
 
 # token配置
 token:
@@ -95,7 +103,7 @@ token:
   # 令牌密钥
   secret: abcdefghijklmnopqrstuvwxyz
   # 令牌有效期（默认30分钟）
-  expireTime: 30
+  expireTime: 1440
 
 # MyBatis配置
 mybatis:
