--- a/.github/workflows/AutoB&D.yml
+++ b/.github/workflows/AutoB&D.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: package
-        path: target/ruoyi-admin.jar
+        path: backEnd/target/ruoyi-admin.jar
 
   deploy:
     runs-on: ubuntu-latest
