--- a/miniapp/project.private.config.json
+++ b/miniapp/project.private.config.json
@@ -9,6 +9,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "pages/userCenter/discountTicket/discountTicket",
+          "pathName": "pages/userCenter/discountTicket/discountTicket",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "pages/userCenter/user",
           "pathName": "pages/userCenter/user",
           "query": "",
