--- a/miniapp/project.private.config.json
+++ b/miniapp/project.private.config.json
@@ -4,6 +4,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "pages/QRcode/QRcode",
+          "pathName": "pages/QRcode/QRcode",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "pages/userCenter/mydingdan/mydingdan",
           "pathName": "pages/userCenter/mydingdan/mydingdan",
           "query": "",
