--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,30 @@ backEnd/ruoyi-ui/node_modules
 backEnd/ruoyi-admin/src/main/resources/application.yml
 backEnd/ruoyi-admin/src/main/resources/application-druid.yml
 backEnd/ruoyi-ui/node_modules
+backEndWx/sky-server/src/main/resources/application.yml
+backEndWx/sky-server/src/main/resources/application-dev.yml
+
+# Compiled class files
+*.class
+
+# Log files
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files
+*.jar
+*.war
+*.ear
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
