change clear pictures and add logic to change preference

--- a/miniapp/project.config.json
+++ b/miniapp/project.config.json
@@ -21,7 +21,10 @@
       "ignore": [],
       "disablePlugins": [],
       "outputPath": ""
-    }
+    },
+    "compileWorklet": true,
+    "condition": true,
+    "swc": true
   },
   "condition": {},
   "editorSetting": {
